<resources>
    <string name="app_name">AppCRUD2</string>
    <string name="enter_name">Ingrese nombre</string>
    <string name="enter_code">Ingrese codigo</string>
    <string name="enter_amount">Ingrese cantidad</string>
    <string name="enter_price">Ingrese precio</string>
    <string name="add_screen_add">Agregar</string>
    <string name="title_favorites">Favorites</string>
    <string name="sub_title_favorites">Productos mas vendidos</string>
</resources>